# ArcNotes

./: .clang-format  .clang-format-ignore  .clang-tidy  .clangd  .codespell-ignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  ArcNotes.Win.slnx  CMakeLists.txt  CMakePresets.json  README.md
src/: ArcNotes.rc  CMakeLists.txt  PBE.ArcNotes.desktop  application.cpp  application.h  arcnotes.qrc  breeze-arcnotes.qrc  breeze-dark-arcnotes.qrc  configurations.qrc  demonotes.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_actions.cpp  mainwindow_hosts.cpp  mainwindow_print.cpp  mainwindow_shell.cpp  pch.h  release.h
src/coordinator/: actionregistry.cpp  actionregistry.h  appcoordinator.cpp  appcoordinator.h  dialogcoordinator.cpp  dialogcoordinator.h
src/core/commands/: commandbus.cpp  commandbus.h  exportcommandhandlers.cpp  exportcommandhandlers.h  foldercommandhandlers.cpp  foldercommandhandlers.h  mediacommandhandlers.cpp  mediacommandhandlers.h  notecommandhandlers.cpp  notecommandhandlers.h  pendingcommandtracker.cpp  pendingcommandtracker.h  searchcommandhandlers.cpp  searchcommandhandlers.h  settingscommandhandlers.cpp  settingscommandhandlers.h  tagcommandhandlers.cpp  tagcommandhandlers.h  trashcommandhandlers.cpp  trashcommandhandlers.h
src/core/data/: colormodedata.h  commandresult.h  commands.h  editorsessionsnapshot.h  notedata.h  notefolderdata.h  notehistorydata.h  notesubfolderdata.h  tagdata.h  trashitemdata.h
src/core/repositories/: colormoderepository.cpp  colormoderepository.h  databaserepository.cpp  databaserepository.h  notefolderrepository.cpp  notefolderrepository.h  notehistoryrepository.cpp  notehistoryrepository.h  noterepository.cpp  noterepository.h  notesubfolderrepository.cpp  notesubfolderrepository.h  settingsrepository.cpp  settingsrepository.h  tagrepository.cpp  tagrepository.h  trashrepository.cpp  trashrepository.h
src/core/services/: editorformattingservice.cpp  errorpresenter.cpp  (+24 more)
src/demonotes/: Markdown Cheatsheet.md  Welcome to ArcNotes.md
src/dialogs/: aboutdialog.cpp  aboutdialog.h  actiondialog.cpp  actiondialog.h  attachmentdialog.cpp  attachmentdialog.h  commandbar.cpp  commandbar.h  filedialog.cpp  filedialog.h  imagedialog.cpp  imagedialog.h  layoutdialog.cpp  layoutdialog.h  linkdialog.cpp  linkdialog.h  linkdialoghost.h  localtrashdialog.cpp  localtrashdialog.h  localtrashdialoghost.h  markdowntabledialog.cpp  markdowntabledialog.h  masterdialog.cpp  masterdialog.h  notebookmarkdialog.cpp  notebookmarkdialog.h  notedialog.cpp  notedialog.h  notedialoghost.h  notediffdialog.cpp  notediffdialog.h  settingsdialog.cpp  settingsdialog.h  storedattachmentsdialog.cpp  storedattachmentsdialog.h  storedfiledialoghost.h  storedimagesdialog.cpp  storedimagesdialog.h  tabledialog.cpp  tabledialog.h  (+4 more)
src/helpers/: arcnotesmarkdownhighlighter.cpp  arcnotesmarkdownhighlighter.h  codetohtmlconverter.cpp  codetohtmlconverter.h  fakevimproxy.cpp  fakevimproxy.h  flowlayout.cpp  htmlentities.cpp  htmlentities.h  nomenuiconstyle.cpp  nomenuiconstyle.h  toolbarcontainer.cpp  toolbarcontainer.h
src/html/: about.html
src/icons/: download-icon.sh
src/languages/: ArcNotes_am_ET.ts  ArcNotes_ar.ts  ArcNotes_bg.ts  ArcNotes_bn.ts  ArcNotes_bs.ts  ArcNotes_ca.ts  ArcNotes_ceb.ts  ArcNotes_cs.ts  ArcNotes_da.ts  ArcNotes_de.ts  ArcNotes_el.ts  ArcNotes_en.ts  ArcNotes_en_GB.ts  ArcNotes_es.ts  ArcNotes_et.ts  ArcNotes_eu.ts  ArcNotes_fa.ts  ArcNotes_fi.ts  ArcNotes_fil.ts  ArcNotes_fr.ts  ArcNotes_ga.ts  ArcNotes_gl.ts  ArcNotes_ha.ts  ArcNotes_he.ts  ArcNotes_hi.ts  ArcNotes_hil.ts  ArcNotes_hr.ts  ArcNotes_hu.ts  ArcNotes_id.ts  ArcNotes_is.ts  ArcNotes_it.ts  ArcNotes_ja.ts  ArcNotes_km.ts  ArcNotes_ko.ts  ArcNotes_ku.ts  ArcNotes_lt.ts  ArcNotes_lv.ts  ArcNotes_mi.ts  ArcNotes_mk.ts  ArcNotes_ms.ts  (+30 more)
src/models/: backlinklistmodel.cpp  backlinklistmodel.h  bookmarktablemodel.cpp  bookmarktablemodel.h  commandmodel.cpp  commandmodel.h  navigationoutlinemodel.cpp  navigationoutlinemodel.h  notefolderlistmodel.cpp  notefolderlistmodel.h  notelistmodel.cpp  notelistmodel.h  notesubfoldertreemodel.cpp  notesubfoldertreemodel.h  searchresultmodel.cpp  searchresultmodel.h  tagtreemodel.cpp  tagtreemodel.h  trashitemmodel.cpp  trashitemmodel.h
src/services/: databaseservice.cpp  databaseservice.h  settingsservice.cpp  settingsservice.h  xdgglobalshortcutmanager.cpp  xdgglobalshortcutmanager.h
src/utils/: cli.cpp  cli.h  debouncer.cpp  debouncer.h  gui.cpp  gui.h  listutils.cpp  listutils.h  misc.cpp  misc.h  schema.cpp  schema.h  urlhandler.cpp  urlhandler.h  widgetbinder.cpp  widgetbinder.h
src/viewmodels/: navigationviewmodel.cpp  navigationviewmodel.h  noteeditorviewmodel.cpp  noteeditorviewmodel.h  notefoldersettingsviewmodel.cpp  notefoldersettingsviewmodel.h  notefolderviewmodel.cpp  notefolderviewmodel.h  notelistviewmodel.cpp  notelistviewmodel.h  notesubfolderviewmodel.cpp  notesubfolderviewmodel.h  searchviewmodel.cpp  searchviewmodel.h  settingsviewmodel.cpp  settingsviewmodel.h  tagtreeviewmodel.cpp  tagtreeviewmodel.h  trashviewmodel.cpp  trashviewmodel.h  viewmodellocator.cpp  viewmodellocator.h
src/views/: logview.cpp  logview.h  navigationview.cpp  navigationview.h  noteeditorview.cpp  noteeditorview.h  notefolderview.cpp  notefolderview.h  notelistview.cpp  notelistview.h  notepreviewview.cpp  notepreviewview.h  noterelationview.cpp  noterelationview.h  notesubfolderview.cpp  notesubfolderview.h  searchpanelview.cpp  searchpanelview.h  tagtreeview.cpp  tagtreeview.h
src/widgets/: arcnotesmarkdowntextedit.cpp  arcnotesmarkdowntextedit.h  arcnotesmarkdowntextedithost.h  combobox.cpp  combobox.h  fontcolorwidget.cpp  fontcolorwidget.h  graphicsview.cpp  graphicsview.h  htmlpreviewwidget.cpp  htmlpreviewwidget.h  label.cpp  label.h  layoutpresetwidget.cpp  layoutpresetwidget.h  lineedit.cpp  lineedit.h  logwidget.cpp  logwidget.h  navigationwidget.cpp  navigationwidget.h  notefolderlistwidget.cpp  notefolderlistwidget.h  notepreviewwidget.cpp  notepreviewwidget.h  qtexteditsearchwidget.cpp  qtexteditsearchwidget.h
(+45 files in other folders)
